--- a/Topic_Modeling.ipynb
+++ b/Topic_Modeling.ipynb
@@ -94,8 +94,8 @@
         "\n",
         "url = f\"https://openapi.naver.com/v1/search/news.json?query={'지속가능성'}&display={100}&start={1}&sort={'date'}\"\n",
         "headers = {\n",
-        "    'X-Naver-Client-Id': 'u48m8PJ4OOADnYKmqOaE',\n",
-        "    'X-Naver-Client-Secret': '2wsXFZo3bQ'\n",
+        "    'X-Naver-Client-Id': '',\n",
+        "    'X-Naver-Client-Secret': ''\n",
         "}\n",
         "\n",
         "response = requests.get(url, headers = headers)\n",
