--- a/Topic_Modeling.ipynb
+++ b/Topic_Modeling.ipynb
@@ -138,8 +138,8 @@
         "import json\n",
         "import html # for decoding\n",
         "\n",
-        "client_id = 'u48m8PJ4OOADnYKmqOaE'\n",
-        "client_secret = '2wsXFZo3bQ'\n",
+        "client_id = ''\n",
+        "client_secret = ''\n",
         "\n",
         "def get_news(query, display=100, start=1, sort='date'):\n",
         "    url = f\"https://openapi.naver.com/v1/search/news.json?query={query}&display={display}&start={start}&sort={sort}\"\n",
