--- a/Topic_Modeling.ipynb
+++ b/Topic_Modeling.ipynb
@@ -1124,8 +1124,8 @@
         "import html\n",
         "from bs4 import BeautifulSoup\n",
         "\n",
-        "client_id = 'u48m8PJ4OOADnYKmqOaE'\n",
-        "client_secret = '2wsXFZo3bQ'\n",
+        "client_id = ''\n",
+        "client_secret = ''\n",
         "\n",
         "def get_news(query, display=100, start=1, sort='date'):\n",
         "    url = f\"https://openapi.naver.com/v1/search/news.json?query={query}&display={display}&start={start}&sort={sort}\"\n",
@@ -1283,8 +1283,8 @@
         "import json\n",
         "import re\n",
         "\n",
-        "client_id = 'u48m8PJ4OOADnYKmqOaE'\n",
-        "client_secret = '2wsXFZo3bQ'\n",
+        "client_id = ''\n",
+        "client_secret = ''\n",
         "\n",
         "query = urllib.parse.quote(input(\"검색어:\"))\n",
         "\n",
