--- a/Time_series_Analysis.ipynb
+++ b/Time_series_Analysis.ipynb
@@ -132,8 +132,8 @@
         "import json\n",
         "\n",
         "# Replace with your actual client ID and secret\n",
-        "client_id = 'u48m8PJ4OOADnYKmqOaE'\n",
-        "client_secret = '2wsXFZo3bQ'\n",
+        "client_id = ''\n",
+        "client_secret = ''\n",
         "\n",
         "def get_news(query, display=100, start=1, sort='date'): #default 값\n",
         "    url = f\"https://openapi.naver.com/v1/search/news.json?query={query}&display={display}&start={start}&sort={sort}\"\n",
